Converted everything to online only so I can start using the app

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,10 @@
     "titleBar.activeBackground": "#a48005",
     "titleBar.activeForeground": "#e7e7e7",
     "titleBar.inactiveBackground": "#a4800599",
-    "titleBar.inactiveForeground": "#e7e7e799"
+    "titleBar.inactiveForeground": "#e7e7e799",
+    "sash.hoverBorder": "#d5a707",
+    "statusBarItem.remoteBackground": "#a48005",
+    "statusBarItem.remoteForeground": "#e7e7e7"
   },
   "peacock.remoteColor": "#a48005"
 }
